<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RHIT</string>
    <string name="serverURL">https://www.rh-gaming.com/android/</string>
    <string name="serverURLUnsecure">http://www.rh-gaming.com/android/</string>
    <string name="help">Help</string>
    <string name="loading_dialog">Loading. Please wait...</string>
    
    <!-- Feedback -->
    <string name="feedback">Feedback</string>
    <string name="inAppFeedbackGreetings">Any comment, feedback, advice will be appreciated! Thank you for
		using our software!</string>
    <string name="submitButton">Submit</string>
    <string name="feedbackPage">feedback.py</string>
    <string name="feedbackFieldName">probe</string>
    
    <!-- ARA Menu Activity -->
    <string name="ara_menu">ARA\nMenu</string>
    <string name="menuServerPage">aramenu.py</string>
    <string name="menuDateVariableName">cattlebruiser</string>
    <string name="ara_banner">Aramark Dining Menu</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunchTime">10:50 AM - 1:50 PM</string>
    <string name="dinnerTime">5:00 PM - 7:00 PM</string>
    <string name="breakfastTime">7:00 AM - 9:30 AM</string>
    <string name="goToDate">Go to date</string>
    <string name="backToToday">Today</string>
    
    <!-- Bandwidth Monitor -->
    <string name="bandwidth">Bandwidth\nMonitor</string>
    <string name="bandwidthMonitor">Bandwidth Monitor</string>
    <string name="sent">Sent: </string>
    <string name="received">Received: </string>
    <string name="policy">Click to View IAIT Bandwidth Policy</string>
    <string name="bandwidthAddress">bandwidth</string>
    <string name="bandwidthUsernameVariableName">scv</string>
    <string name="bandwidthPasswordVariableName">immortal</string>
    
    <!-- Schedule Lookup Activity -->
    <string name="schedule_lookup">Schedule\nLookup</string>
    <string name="schedule_banner">Schedule Lookup</string>
    <string name="scheduleSearchURL">schedule</string>
    <string name="quarterNameLookup">templar</string>
    <string name="quarterSelectionLookup">201230</string>
    <string name="username_only">Usernames Only</string>
    <string name="Hour1">1\n8:05</string>
    <string name="Hour2">2\n9:00</string>
    <string name="Hour3">3\n9:55</string>
    <string name="Hour4">4\n10:50</string>
    <string name="Hour5">5\n11:45</string>
    <string name="Hour6">6\n12:40</string>
    <string name="Hour7">7\n1:35</string>
    <string name="Hour8">8\n2:30</string>
    <string name="Hour9">9\n3:25</string>
    <string name="Hour10">10\n4:20</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="emptyTextbox">You must enter a username to find a schedule.</string>
    <string name="noClasses">No classes found.</string>
    <string name="className">Name</string>
    <string name="courseNumber">Course Number</string>
    <string name="instructor">Instructor</string>
    <string name="termSchedule">Term Schedule</string>
    <string name="finalSchedule">Final Schedule</string>
   
    <!-- Student Lookup Activity -->
    <string name="fieldNameLookup">infestor</string>
    <string name="searchPage">student_lookup</string>
    <string name="searchButton">Search</string>
    <string name="student_lookup">Student\nLookup</string>
    <string name="student_banner">Student Lookup</string>
    <string name="studentNodesTagName">Student</string>
    <string name="usernameInputHint">name or username</string>
    <string name="usernameBackgroundHint">Please, enter a name or username above\nto start searching	</string>
    <string name="emptySearchErr">You have to put something in the textbox in order to search.	</string>
    <string name="resultParsingErr">Result parsing error. Verify your network connection.</string>
    <string name="placeHolderDescription">User Image Placeholder</string>
    <string name="checkSchedule">Check Schedule</string>
    <plurals name="numberOfResultsAvailable">
        <item quantity="one">1 result:</item>
        <item quantity="other">%d results:</item>
    </plurals>
    
    <!-- Password Manager Stuff -->
    <string name="editPassword">Edit Password</string>
    <string name="username">"Username:"</string>
    <string name="passwordtitle">Please enter your Kerberos Credentials.</string>
    <string name="password">Password:</string>
    <string name="savePassword">Save Credentials</string>
    
    <!-- Help Page -->
    <string name="helpFieldName">hellion</string>
    <string name="help_banner">Help</string>
    <string name="helpPage">help.py</string>
    <string name="scheduleHelp">Schedule Lookup Help</string>
    <string name="studentHelp">Student Lookup Help</string>
    <string name="araHelp">ARA Menu Help</string>
    <string name="bandwidthHelp">Bandwidth Monitor Help</string>
    <string name="feedbackHelp">Feedback Help</string>
    <string name="currentHelpBody"></string>
    <string name="helpBody"></string>
    <string name="scheduleHelpString">schedule</string>
    <string name="studentHelpString">student</string>
    <string name="araHelpString">ara</string>
    <string name="bandwidthHelpString">bandwidth</string>
    <string name="feedbackHelpString">feedback</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    
    <!-- Subway Cam -->
    <string name="subwayCam">Subway\nCamera</string>
    <string name="subwayBanner">Subway Camera</string>
    <string name="subwayURL">subway</string>
</resources>