<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">
    
   <LinearLayout
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

       <TextView
           android:id="@+id/scheduleLookupTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/scheduleHelp"
           android:textColor="@color/link_blue"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
       <TextView
           android:id="@+id/studentLookupTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/studentHelp"
           android:textColor="@color/link_blue"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
       <TextView
           android:id="@+id/araMenuTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/araHelp"
           android:textColor="@color/link_blue"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
       <TextView
           android:id="@+id/bandwidthMonitorTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/bandwidthHelp"
           android:textColor="@color/link_blue"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
       <TextView
           android:id="@+id/feedbackTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/feedbackHelp"
           android:textColor="@color/link_blue"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
		<TextView
                android:id="@+id/helpSeparatorTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/rose_red"
                android:padding="5sp"
                android:text="@string/currentHelpBody"
                android:textColor="@color/white"
                android:textSize="22sp" />
       
       <TextView
           android:id="@+id/helpBodyTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/helpBody"
           android:textColor="@color/black"
           android:textAppearance="?android:attr/textAppearanceLarge" />
       
   </LinearLayout> 
   

</ScrollView>