<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:padding="10dp" android:id="@+id/password_root">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordtitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <EditText
                android:id="@+id/passwordUdername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:inputType="text">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <EditText
                android:id="@+id/passwordPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>
    <CheckBox
        android:id="@+id/savePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savePassword" />
    <Button
        android:id="@+id/passwordSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitButton" />
</LinearLayout>