<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/white"
		android:orientation="vertical">
		<TextView
			android:id="@+id/titleTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/menuHeading"
			android:padding="5sp"
			android:textColor="@color/black"
			android:background="@color/white"
			android:textSize="26sp" />
		<LinearLayout
			android:id="@+id/linearLayout1"
			android:layout_gravity="bottom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/breakfastLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:padding="5sp"
				android:text="@string/breakfast"
				android:textColor="@color/white"
				android:background="@color/rose_red"
				android:textSize="22sp" />
			<TextView
				android:id="@+id/breakfastTimeLabel"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_gravity="bottom"
				android:gravity="bottom"
				android:padding="5sp"
				android:text="@string/breakfastTime"
				android:textColor="@color/white"
				android:background="@color/rose_red"
				android:textSize="18sp" />
		</LinearLayout>
		<TextView
			android:id="@+id/breakfastTextView"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			android:textColor="@color/black"
			android:layout_marginLeft="5sp"
			android:textSize="18sp" />

		<LinearLayout
			android:id="@+id/linearLayout1"
			android:layout_gravity="bottom"
			android:background="@color/rose_red"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/lunchLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:padding="5sp"
				android:text="@string/lunch"
				android:textColor="@color/white"
				android:background="@color/rose_red"
				android:textSize="22sp" />
			<TextView
				android:id="@+id/lunchTimeLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5sp"
				android:gravity="bottom"
				android:layout_gravity="bottom"
				android:text="@string/lunchTime"
				android:textColor="@color/white"
				android:background="@color/rose_red"
				android:textSize="18sp" />
		</LinearLayout>
		<TextView
			android:id="@+id/lunchTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:layout_marginLeft="5sp"
			android:textSize="18sp" />
		<LinearLayout
			android:id="@+id/linearLayout1"
			android:background="@color/rose_red"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/dinnerLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:padding="5sp"
				android:text="@string/dinner"
				android:textColor="@color/white"
				android:textSize="22sp" />
			<TextView
				android:id="@+id/dinnerTimeLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:gravity="bottom"
				android:padding="5sp"
				android:text="@string/dinnerTime"
				android:textColor="@color/white"
				android:textSize="18sp" />
		</LinearLayout>
		<TextView
			android:id="@+id/dinnerTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5sp"
			android:textColor="@color/black"
			android:textSize="18sp" />
	</LinearLayout>
</ScrollView>